--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ html {
 }
 
 #title {
-  background-image: url("/images/capetown.jpg");
+  background-image: url("https://images.unsplash.com/photo-1588455471455-4b28e9ab3cd5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2003&q=80");
   height: 910px;
   background-size: cover;
   background-position: center;
