--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   /* font-size: 25px; */
-  /* background: #212c4f; */
-  background-color: white;
+  background: #212c4f;
+  /* background-color: white; */
 }
 
 /* .container-fluid {
@@ -94,8 +94,8 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 #s1 p {
-  /* color: white; */
-  color: #8f8f8f;
+  color: white;
+  /* color: #8f8f8f; */
   font-size: 14px;
 }
 #s1 h2 {
@@ -104,8 +104,8 @@ h1 {
 }
 
 #s2 p {
-  /* color: white; */
-  color: #8f8f8f;
+  color: white;
+  /* color: #8f8f8f; */
   font-size: 14px;
 }
 
@@ -192,7 +192,7 @@ a {
 
 #features {
   padding: 8% 15%;
-  /* background-color: #212c4f; */
+  background-color: #212c4f;
   /* color: #fff; */
 }
 #features p {
@@ -200,16 +200,16 @@ a {
   line-height: 1.7;
   /* color: white; */
   color: #8f8f8f;
-  /* background: linear-gradient(
+  background: linear-gradient(
     104.74deg,
     rgb(198, 208, 235) 0%,
     rgb(198, 208, 235) 100%
   );
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  -webkit-text-fill-color: transparent;
 }
 .kit {
-  /* border: 1px solid rgba(255, 255, 255, 0.2); */
+  border: 1px solid rgba(255, 255, 255, 0.2);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 10px 20px;
   border-radius: 12px;
   color: white;
@@ -244,6 +244,7 @@ a {
 #pricing {
   padding: 100px;
   text-align: center;
+  /* background-color: #212c4f; */
 }
 .pricing-column {
   padding: 3% 2%;
@@ -252,6 +253,7 @@ a {
 #pricing_2 {
   padding: 100px;
   text-align: center;
+  /* background-color: #212c4f; */
 }
 .pricing-column_2 {
   padding: 3% 2%;
@@ -261,13 +263,16 @@ a {
 #testimonials {
   /* padding: 7% top and botton 15% left and right  */
   text-align: center;
-  background-color: #fff;
-  color: #000;
+  /* background-color: #fff; */
+  background-color: #212c4f;
+  /* color: #000; */
+  color: white;
 }
 #press {
-  background-color: #fff;
+  padding: 8% 15%;
+  background-color: #212c4f;
   text-align: center;
-  padding-bottom: 3%;
+  /* padding-bottom: 3%; */
 }
 
 .press-log {
@@ -368,8 +373,8 @@ a {
 
 #s3 {
   padding: 8% 15%;
-  /* background-color: #212c4f; */
-  background-color: white;
+  background-color: #212c4f;
+  /* background-color: white; */
 }
 
 .kit p {
@@ -380,25 +385,25 @@ a {
   margin-top: 20px;
   margin-left: 20px;
   margin-bottom: 20px;
-  color: #8f8f8f;
-  /* background: linear-gradient(
+  /* color: #8f8f8f; */
+  background: linear-gradient(
     104.74deg,
     rgb(198, 208, 235) 0%,
     rgb(198, 208, 235) 100%
   );
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  -webkit-text-fill-color: transparent;
 }
 
 #s1 {
   padding: 8% 15%;
-  /* background-color: #212c4f; */
-  color: #fff;
+  background-color: #212c4f;
+  /* color: #fff; */
 }
 #s2 {
   padding: 8% 15%;
-  /* background-color: #212c4f; */
-  background-color: #fff;
+  background-color: #212c4f;
+  /* background-color: #fff; */
 }
 #s3 h1 {
   margin-top: 10px;
@@ -456,8 +461,8 @@ a {
 
 #quote {
   padding: 8% 15%;
-  /* background-color: #212c4f; */
-  background-color: #fff;
+  background-color: #212c4f;
+  /* background-color: #fff; */
 }
 
 #quote form {
