updated final color

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,7 +270,7 @@ a {
 }
 #press {
   padding: 8% 15%;
-  background-color: #212c4f;
+  background-color: white;
   text-align: center;
   /* padding-bottom: 3%; */
 }
